# meadowlark-plugins

./: .gitignore  Cargo.toml  DESIGN_DOC.md  README.md  bundler.toml
example-gain-dsp/: Cargo.toml
example-gain-dsp/src/: lib.rs
example-gain-plugin/: Cargo.toml  README.md
example-gain-plugin/src/: lib.rs
example-gain-vst/: Cargo.toml
example-gain-vst/src/: lib.rs
example-gain/example-gain-baseplug-nogui/: Cargo.toml
example-gain/example-gain-baseplug-nogui/src/: lib.rs
example-gain/example-gain-dsp/: Cargo.toml
example-gain/example-gain-dsp/src/: lib.rs
gain-pan-stereo/: Cargo.toml  README.md  bundler.toml
gain-pan-stereo/src/: .lib.rs.swp  lib.rs
mix-utility/: Cargo.toml  README.md  bundler.toml
mix-utility/src/: .lib.rs.swp  lib.rs
noise-generator/noise-generator-dropseed/: Cargo.toml
noise-generator/noise-generator-dropseed/src/: lib.rs
noise-generator/noise-generator-dsp/: Cargo.toml
noise-generator/noise-generator-dsp/src/: lib.rs
parametric-eq/: Cargo.toml
parametric-eq/src/: atomic_f64.rs  editor.rs  eq_core.rs  eq_params.rs  lib.rs  parameter.rs  ui.rs
parametric-eq/src/editor/: channel_controls.rs  equi.rs  graph.rs  theme.css
parametric-eq/src/eq_core/: eq.rs  svf.rs  units.rs
parametric-eq/src/ui/: channel_controls.rs  graph.rs  theme.css
parametric-eq/src/util/: lpsd.rs  mod.rs
plugins/meadow_eq/: Cargo.toml
plugins/meadow_eq/src/: lib.rs
plugins/meadow_eq_dsp/: Cargo.toml
plugins/meadow_eq_dsp/src/: lib.rs
