[package]
name = "meadowlark-plugins"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
edition = "2018"
publish = false

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "noise-generator/noise-generator-dsp",
    "noise-generator/noise-generator-dropseed",
]

[dependencies]
