[package]
name = "example-gain-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["packed-simd"]
packed-simd = ["packed_simd_2"]

[dependencies]
rusty-daw-core = "0.2"
packed_simd_2 = { version = "0.3", optional = true }