[package]
name = "example-gain-baseplug-nogui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "example_gain_baseplug_nogui"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["optimized_simd"]
optimized_simd = []

[dependencies]
example-gain-dsp = { path = "../example-gain-dsp" }
baseplug = { git = "https://github.com/wrl/baseplug.git", rev = "f369427e9f8e0fed5cbfdddf08b2ccc145dd7ceb" } 
serde = { version = "1.0", features = ["derive"] }